--- a/search/style.css
+++ b/search/style.css
@@ -25,8 +25,11 @@
   scrollbar-width: none;  /* Firefox */
 }
 
+* {
+  transition: background-color 0.5s;
+}
+
 body {
-  transition: background-color 1s;
 	background-color: #1f1f1f;
 	color: #cccccc;
 	--box: #1f1f1f;
