--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-.navigation {
-  background-color: rgba(255,255,255,.01);
-  height: 100px;
-  width: 100%;
-  display: flex;
-  align-content: center;
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #081018;
 }
