--- a/style.css
+++ b/style.css
@@ -1,5 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 body{
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: #081018;
+}
+
+.navigation {
+  background-color: rgba(255,255,255,.01);
+  height: 100px;
+  width: 100%;
+  display: flex;
+  align-content: center;
+}
+
+.part {
+  border-radius: 20px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 500px;
+  width: 400px;
+  margin: auto;
+  background-color: rgba(255,255,255,.01);
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-size: 50px;
+  text-align: center;
+  text-decoration: underline;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.link {
+  font-size: 40px;
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  width: 200px;
+  text-align: center;
+  border-radius: 50px;
+  transition: background-color 0.5s;
+  border: 2px solid;
+}
+
+.link:hover {
+  border: 2px solid;
+  background-color: rgba(255,255,255,0.1);
 }
