--- a/style.css
+++ b/style.css
@@ -1,55 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
-body{
+h1, a {
+  font-family: "impact";
+}
+
+body {
   margin: 0;
   padding: 0;
-  background-color: #081018;
 }
 
-.navigation {
-  background-color: rgba(255,255,255,.01);
-  height: 100px;
-  width: 100%;
-  display: flex;
-  align-content: center;
-}
-
-.form {
-  border-radius: 20px;
+.center {
+  margin: 0;
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 500px;
-  width: 400px;
-  margin: auto;
-  background-color: rgba(255,255,255,.01);
-  left:50%;
-  top:50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
+  animation: intro 2s ease;
+  animation-fill-mode: forwards;
+  height: 300px;
+  border: 10px solid;
 }
 
-h1 {
-  font-size: 50px;
-  text-align: center;
-  text-decoration: underline;
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
+.header {
+  color: #fc9dd6;
+  height: auto;
+  font-size: 100px;
+  margin: 0;
+}
+
+@keyframes intro {
+  0% {opacity: 0%;}
+  50% {opacity: 100%;}
+  100% {top: 20%;}
+}
+
+@keyframes intro2 {
+  0% {opacity: 0%; top: -30px;}
+  100% {opacity: 100%; top: -10px;}
+}
+
+.header2 {
+  margin-top: 1500px;
 }
 
 .link {
-  font-size: 40px;
+  font-size: 50px;
   text-decoration: none;
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
-  width: 300px;
-  text-align: center;
-  border-radius: 50px;
-  transition: background-color 0.5s;
-  border: 2px solid;
-}
-
-.link:hover {
-  border: 2px solid;
-  background-color: rgba(255,255,255,0.1);
+  color:white;
+  position: relative;
+  opacity: 0%;
+  animation: intro2 1s ease-in-out;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
 }
