--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
+html {
+  scroll-behavior: smooth; 
+}
+
 h1, a {
   font-family: "impact";
 }
@@ -40,6 +44,10 @@ body {
 
 .header2 {
   margin-top: 1500px;
+  color: white;
+  text-align: center;
+  font-family: impact;
+  font-size: 50px;
 }
 
 .link {
@@ -51,4 +59,9 @@ body {
   animation: intro2 1s ease-in-out;
   animation-delay: 2s;
   animation-fill-mode: forwards;
+}
+
+#section1 {
+      width: 100%;
+      height: 100vh;
 }
